añado node al proyecto

--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
 </head>
 <body>
 
+    <header class="header">
+        <div class="barra contenedor">
+            
+        </div>
+    </header>
+
 </body>
 </html>
