header html con clases BEM

--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
 
     <header class="header">
         <div class="barra contenedor">
-            
+            <div class="barra__logo">
+                <p class="barra__nombre">Viaje</p>
+            </div>
+
+            <nav class="barra__navegacion">
+                <a href="#">Lugares para ospedarte</a>
+                <a href="#">Experiencias</a>
+                <a href="#">Experiencias en línea</a>
+            </nav>
+
+            <nav class="barra__login">
+                <a href="#">Hazte Anfitrión</a>
+            </nav>
         </div>
     </header>
 
