--- a/index.html
+++ b/index.html
@@ -28,6 +28,38 @@
                 <a href="#">Hazte Anfitrión</a>
             </nav>
         </div>
+
+        <form action="" class="formulario contenedor">
+            <div class="formulario__campo">
+                <label for="ubicacion" class="formulario__label">Ubicación</label>
+                <input type="text" class="formulario__input" id="ubicacion" placeholder="¿A donde viajas?">
+            </div>
+
+            <div class="formulario__campo">
+                <label for="llegada" class="formulario__label">Llegada</label>
+                <input type="date" class="formulario__input" id="llegada">
+            </div>
+
+            <div class="formulario__campo">
+                <label for="salida" class="formulario__label">Salida</label>
+                <input type="date" class="formulario__input" id="salida">
+            </div>
+
+            <div class="formulario__campo">
+                <label for="huespedes" class="formulario__label">Húespedes</label>
+                <input type="number" class="formulario__input" id="huespedes" placeholder="¿Cuántos?">
+            </div>
+
+            <div class="formulario__campo">
+                <input type="submit" class="formulario__submit" value="Buscar">
+            </div>
+        </form>
+
+        <div class="header__busqueda contenedor">
+            <p class="header__busqueda-label">¿No sabes a donde ir?</p>
+            <a href="#" class="header__busqueda-boton">Búsqueda Flexible</a>
+        </div>
+
     </header>
 
 </body>
