creamos sección destinos y damos estilos.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
 
             <nav class="barra__navegacion">
-                <a class="barra__link" href="#">Lugares para ospedarte</a>
+                <a class="barra__link" href="#">Lugares para hospedarte</a>
                 <a class="barra__link" href="#">Experiencias</a>
                 <a class="barra__link" href="#">Experiencias en línea</a>
             </nav>
@@ -63,7 +63,7 @@
     </header>
 
     <section class="destinos contenedor seccion">
-        <h2 class="destinos__heading">Descubre alojamientos pupulares</h2>
+        <h2 class="destinos__heading">Descubre alojamientos populares</h2>
 
         <ul class="destinos__grid">
             <li class="destino">
